force-app/main/default/objects/Registration_Question__c/fields/Answered__c.field-meta.xml
<CustomField>
    <fullName>Answered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by process builder</description>
    <label>Answered?</label>
    <type>Checkbox</type>
</CustomField>