force-app/main/default/objects/Registration_Question__c/fields/Correction_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Correction_Instructions__c</fullName>
    <label>Correction Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>