force-app/main/default/objects/Registration_Question__c/fields/Disqualified__c.field-meta.xml
<CustomField>
    <fullName>Disqualified__c</fullName>
    <formula>Question_ID__r.Disqualified_Answer__c =   Disqualified_Answer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disqualified?</label>
    <type>Checkbox</type>
</CustomField>