force-app/main/default/objects/Registration_Question__c/fields/Eligibility_Notification__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Notification__c</fullName>
    <formula>IF(
Question_ID__r.Disqualified_Answer__c = TEXT(YesNo__c),"","Answering "+( Question_ID__r.Disqualified_Answer__c)+" to the question: '"+(Question_Short_Text__c)+"' makes this application ineligible for submission. Please correct before submitting.")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligibility Notification</label>
    <type>Text</type>
</CustomField>