force-app/main/default/objects/Registration_Question__c/fields/Question_Short_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Short_Text__c</fullName>
    <formula>Question_ID__r.Short_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Short Text</label>
    <type>Text</type>
</CustomField>