force-app/main/default/objects/Registration_Question__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <description>test of question populated when the question is created from the question bank on creation of the registration</description>
    <label>Question Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>