force-app/main/default/objects/Registration_Question__c/fields/Reg_Answer__c.field-meta.xml
<CustomField>
    <fullName>Reg_Answer__c</fullName>
    <label>Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>