force-app/main/default/objects/Registration_Question__c/fields/Registration_ID__c.field-meta.xml
<CustomField>
    <fullName>Registration_ID__c</fullName>
    <label>Registration ID</label>
    <referenceTo>License_Registration__c</referenceTo>
    <relationshipLabel>Registration Questions</relationshipLabel>
    <relationshipName>Registration_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>