force-app/main/default/objects/Registration_Question__c/fields/Stop_Auto_Renew_Value__c.field-meta.xml
<CustomField>
    <fullName>Stop_Auto_Renew_Value__c</fullName>
    <description>value populated from question bank when question is created. Used in auto-renewal process to determine if this reg can be auto-renewed or must go into review.</description>
    <label>Stop Auto-Renew Value</label>
    <length>5</length>
    <type>Text</type>
</CustomField>