force-app/main/default/objects/Registration_Question__c/fields/YesNo__c.field-meta.xml
<CustomField>
    <fullName>YesNo__c</fullName>
    <label>YesNo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>