force-app/main/default/objects/Registration_Question__c/recordTypes/YesNo.recordType-meta.xml
<RecordType>
    <fullName>YesNo</fullName>
    <active>true</active>
    <label>YesNo</label>
</RecordType>